# gitlab-migration-tool

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  repos.example.json
gitlab_migration_tool/: gitea_manager.py  gitlab_manager.py  main.py
gitlab_migration_tool/config/: settings.py
gitlab_migration_tool/utils/: prints.py  progress.py  url_parsing.py
tests/: test_gitlab_manager.py
