[tool.poetry]
name = "gitlab-migration-tool"
version = "0.1.0"
description = ""
authors = ["darlin.teuma <darlin.teuma@sprint-pay.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = 'gitlab_migration_tool.main:main'

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
gitpython = "^3.1.43"
python-gitlab = "^4.9.0"
tqdm = "^4.66.5"
environs = "^11.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
